--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -9,7 +9,8 @@
 		<module>service-log</module>
 		<module>service-new-order</module>
 		<module>common-kafka</module>
-	</modules>
+        <module>service-users</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
