--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -11,6 +11,7 @@
 		<module>common-kafka</module>
         <module>service-users</module>
         <module>service-httpecormmerce</module>
+        <module>service-reading-report</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
